JVKP/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Sub_Type__c</fullName>
        <label>Account Sub Type</label>
        <picklist>
            <controllingField>Account_Type__c</controllingField>
            <picklistValues>
                <fullName>Dialysis Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>340B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ambulatory Infusion Ctr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correctional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genzyme Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Practice/Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homecare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital/Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Lot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Advocacy Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religious Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY()  -  DOB__c) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disease__c</fullName>
        <label>Disease</label>
        <picklist>
            <picklistValues>
                <fullName>Fabry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPS1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Preference__c</fullName>
        <label>Email Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Preference__c</fullName>
        <label>Fax Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Preference__c</fullName>
        <label>Home Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <label>Home</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Insurance_Account_ID__c</fullName>
        <displayFormat>IAC-{00000000}</displayFormat>
        <label>Insurance Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Preference__c</fullName>
        <label>Mobile Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Preference__c</fullName>
        <label>Office Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ok to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unconsented_Patient_ID__c</fullName>
        <displayFormat>UPP-{00000000}</displayFormat>
        <label>Unconsented Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noofduplicateaccs__c</fullName>
        <label>noofduplicateaccs</label>
        <summaryForeignKey>Duplicate_Account__c.MD_Relation_with_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Insurance_Account</fullName>
        <active>true</active>
        <description>Big insurance organization. Insurance objects can be realted to this record type.</description>
        <label>Insurance Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unconsented_Patient</fullName>
        <active>true</active>
        <description>A patient whose identity is know but has not signed a consent form</description>
        <label>Unconsented Patient</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>preference</fullName>
        <active>false</active>
        <errorConditionFormula>IF( RecordType.Name = &quot;Patient&quot;,AND((ISBLANK( Email__c )   ||   ISPICKVAL( Email_Preference__c ,&quot;&quot;)), (ISBLANK( Fax )||   ISPICKVAL( Fax_Preference__c ,&quot;&quot;)),( ISBLANK( Home__c ) ||ISPICKVAL( Home_Preference__c ,&quot;&quot;) ), (ISBLANK( Mobile__c ) || ISPICKVAL( Mobile_Preference__c ,&quot;&quot;)),(ISBLANK ( Office__c) || ISPICKVAL( Office_Preference__c  ,&quot;&quot;))), null)</errorConditionFormula>
        <errorMessage>you should select at least one pair of preferences.</errorMessage>
    </validationRules>
</CustomObject>